--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -9,6 +9,6 @@ phases:
       #Build spec reference
       #https://docs.aws.amazon.com/codebuild/latest/userguide/build-spec-ref.html
       # Package SAM template
-      - sam package --template-file template.yaml --s3-bucket sam-artifacts-sou --output-template-file packaged.yaml
+      - sam package --template-file template.yaml --s3-bucket my-sample-s3-bucket-sarg-2022 --output-template-file packaged.yaml
       # Deploy packaged SAM template
       - sam deploy --template-file packaged.yaml --stack-name python-hello-world-sam-application --capabilities CAPABILITY_IAM
