Dynamic NR parameters

--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -4,8 +4,14 @@ phases:
     commands:
       - echo Build started on `date`
       - echo Entered the build phase ...
-      - sed -i 's/{tipo_trigger}/Api/g' ./template.yaml
-      - echo template.yaml was updated ...
+      # - sed -i 's/{tipo_trigger}/Api/g' ./template.yaml
+      # - echo template.yaml was updated ...
+      - echo starting template modification ...
+      - NR_ACCOUNT_ID=$(aws --region=us-east-1 ssm get-parameter --name "NR_ACCOUNT_ID" --with-decryption --output text --query Parameter.Value)
+      - NR_LICENSE_KEY=$(aws --region=us-east-1 ssm get-parameter --name "NR_LICENSE_KEY" --with-decryption --output text --query Parameter.Value)
+      - sed -i 's/{nr_account_id}/$NR_ACCOUNT_ID/g' ./template.yaml
+      - sed -i 's/{nr_license_key}/$NR_LICENSE_KEY/g' ./template.yaml
+      - echo template updated
       #Lambda deploy reference
       #https://docs.aws.amazon.com/serverless-application-model/latest/developerguide/serverless-deploying.html
       #Build spec reference
