--- a/template.yaml
+++ b/template.yaml
@@ -7,7 +7,7 @@ Resources:
     Type: AWS::Serverless::Function
     Description: 'Lambda function inserts data into DynamoDB table'
     Properties:
-      FunctionName: WeatherFunction
+      FunctionName: RecommendationsFunction
       Handler: newrelic_lambda_wrapper.handler
       Runtime: python3.8
       CodeUri: src/
@@ -37,7 +37,7 @@ Resources:
   DynamoDBTable:
     Type: AWS::Serverless::SimpleTable
     Properties:
-      TableName: WeatherData
+      TableName: RecommendationsData
       
 Outputs:
   EndpointUrl:
