--- a/buildspec.yaml
+++ b/buildspec.yaml
@@ -18,6 +18,13 @@ phases:
       #Build spec reference
       #https://docs.aws.amazon.com/codebuild/latest/userguide/build-spec-ref.html
       # Package SAM template
+      # - sam package --template-file template.yaml --s3-bucket my-test-bucket-sarg-steven-rivera-2 --output-template-file packaged.yaml
+      # Deploy packaged SAM template
+      # - sam deploy --template-file packaged.yaml --stack-name python-hello-world-sam-application --capabilities CAPABILITY_IAM
+  post_build:
+    commands:
+      - echo Post build started
+      # Package SAM template
       - sam package --template-file template.yaml --s3-bucket my-test-bucket-sarg-steven-rivera-2 --output-template-file packaged.yaml
       # Deploy packaged SAM template
       - sam deploy --template-file packaged.yaml --stack-name python-hello-world-sam-application --capabilities CAPABILITY_IAM
