--- a/template.yaml
+++ b/template.yaml
@@ -26,8 +26,9 @@ Resources:
         Variables:
           # For the instrumentation handler to invoke your real handler, we need this value
           NEW_RELIC_LAMBDA_HANDLER: index.lambda_handler
-          NEW_RELIC_ACCOUNT_ID: {nr_account_id}
-          NEW_RELIC_LICENSE_KEY: {nr_license_key}
+          NEW_RELIC_ACCOUNT_ID: 3485760
+          # NEW_RELIC_LICENSE_KEY: {nr_license_key}
+          NEW_RELIC_LICENSE_KEY_SECRET: NEW_RELIC_LICENSE_KEY_CUSTOM_SECRET
           # NEW_RELIC_EXTENSION_SEND_FUNCTION_LOGS: true
           # NEW_RELIC_EXTENSION_LOG_LEVEL: DEBUG
       Layers:
